--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 opencv-python
-torch
-torchvision
-torchaudio
---index-url https://download.pytorch.org/whl/cu118
+torch --index-url https://download.pytorch.org/whl/cu118
+torchvision --index-url https://download.pytorch.org/whl/cu118
+torchaudio --index-url https://download.pytorch.org/whl/cu118
 ultralytics
 pyautogui
 nvidia-pyindex
