--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ torch --index-url https://download.pytorch.org/whl/cu118
 torchvision --index-url https://download.pytorch.org/whl/cu118
 torchaudio --index-url https://download.pytorch.org/whl/cu118
 ultralytics
-pyautogui
 nvidia-pyindex
 tensorrt
 mss
+ffmpeg-python
